--- a/absensi.html
+++ b/absensi.html
@@ -1,23 +1,182 @@
-function renderRingkasan(list){
-  const tbody=document.getElementById('absensi-ringkasan');
-  tbody.innerHTML="";
-  list.forEach(item=>{
-    let hadir=item.siswa.filter(s=>s.status==="Hadir").length;
-    let izin=item.siswa.filter(s=>s.status==="Izin").length;
-    let sakit=item.siswa.filter(s=>s.status==="Sakit").length;
-    let alpa=item.siswa.filter(s=>s.status==="Alpa").length;
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Absensi Siswa - Ekstra Tari</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <!-- FileSaver untuk download -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+</head>
+<body>
+
+<!-- Header -->
+<div class="header">
+  <div class="brand">
+    <img src="assets/img/logo-sekolah.jpg" alt="logo sekolah" style="height:50px;margin-right:8px;">
+    <div class="brand-text">
+      <div class="title">Ekstra Tari</div>
+      <div class="subtitle">SDI Ulumiyah Al Makruf</div>
+    </div>
+  </div>
+  <div>
+    <img src="assets/img/logo-ekstra.png" alt="logo ekstra" style="height:64px;border-radius:8px">
+  </div>
+</div>
+
+<!-- Navigasi -->
+<div class="nav">
+  <a href="index.html">Beranda</a>
+  <a href="galeri.html">Galeri</a>
+  <a href="pendaftaran.html">Pendaftaran</a>
+  <a href="absensi.html">Absensi</a>
+  <a href="rapor.html">Rapor</a>
+  <a href="kinerja.html">Kinerja</a>
+  <a href="materi.html">Materi</a>
+  <a href="kontak.html">Kontak</a>
+  <a href="admin.html">Admin</a>
+</div>
+
+<!-- Kontainer -->
+<div class="container">
+  <div class="hero">
+    <h1>Absensi Pertemuan</h1>
+    <form id="absensiForm">
+      <label for="tanggal">Tanggal Pertemuan:</label>
+      <input type="date" id="tanggal" class="input" required>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nama Siswa</th>
+            <th>Kelas</th>
+            <th>Hadir</th>
+            <th>Izin</th>
+            <th>Sakit</th>
+            <th>Alpa</th>
+          </tr>
+        </thead>
+        <tbody id="siswa-list"></tbody>
+      </table>
+
+      <button type="submit" class="btn">Simpan Absensi</button>
+      <button type="button" class="btn" onclick="downloadAbsensiJSON()">Download JSON</button>
+      <button type="button" class="btn" onclick="downloadAbsensiWord()">Download Word</button>
+    </form>
+  </div>
+
+  <div class="hero">
+    <h2>Rekap Absensi</h2>
+    <div id="rekap-absensi"></div>
+  </div>
+</div>
+
+<!-- Footer -->
+<div class="footer">
+  <strong>SDI Ulumiyah Al Makruf</strong><br>
+  Jl. Arbei Dsn. Jombangan Ds. Tertek, Pare, Kec. Pare, Kab. Kediri, Jawa Timur<br>
+  Email: sdiuam.almakruf@gmail.com | Telp: 085859830350 (Pak Khafid)
+</div>
+
+<script>
+let siswa=[];
+
+// load siswa dari JSON
+fetch('data/siswa.json')
+.then(r=>r.json())
+.then(data=>{
+  siswa=data;
+  const tbody=document.getElementById('siswa-list');
+  siswa.forEach(s=>{
     const tr=document.createElement('tr');
-    tr.innerHTML=`<td><a href="absensi.html">${item.tanggal}</a></td>
-                  <td>${hadir}</td><td>${izin}</td><td>${sakit}</td><td>${alpa}</td>`;
+    tr.innerHTML=`
+      <td>${s.nama}</td>
+      <td>${s.kelas}</td>
+      <td><input type="radio" name="${s.nama}" value="Hadir" required></td>
+      <td><input type="radio" name="${s.nama}" value="Izin"></td>
+      <td><input type="radio" name="${s.nama}" value="Sakit"></td>
+      <td><input type="radio" name="${s.nama}" value="Alpa"></td>
+    `;
     tbody.appendChild(tr);
+  });
+  tampilkanRekap();
+});
+
+// simpan absensi
+document.getElementById('absensiForm').addEventListener('submit',e=>{
+  e.preventDefault();
+  const tanggal=document.getElementById('tanggal').value;
+  let pertemuan={tanggal,siswa:[]};
+  siswa.forEach(s=>{
+    const status=document.querySelector(`input[name="${s.nama}"]:checked`).value;
+    pertemuan.siswa.push({nama:s.nama,kelas:s.kelas,status});
+  });
+  let data=JSON.parse(localStorage.getItem('absensi'))||[];
+  data.push(pertemuan);
+  localStorage.setItem('absensi',JSON.stringify(data));
+  tampilkanRekap();
+  alert("Absensi tersimpan!");
+});
+
+// tampilkan rekap di halaman
+function tampilkanRekap(){
+  const data=JSON.parse(localStorage.getItem('absensi'))||[];
+  const rekap=document.getElementById('rekap-absensi');
+  rekap.innerHTML="";
+  data.forEach(p=>{
+    let table=`<h3>${p.tanggal}</h3><table class="table"><tr><th>Nama</th><th>Kelas</th><th>Status</th></tr>`;
+    p.siswa.forEach(s=>{
+      table+=`<tr><td>${s.nama}</td><td>${s.kelas}</td><td>${s.status}</td></tr>`;
+    });
+    table+=`</table>
+    <p style="margin-top:20px;text-align:right;">
+      Kediri, ${new Date().toLocaleDateString('id-ID')}<br>
+      Guru Ekstra Tari<br><br><br><strong>Nikmatu Zuhroh</strong>
+    </p>`;
+    rekap.innerHTML+=table;
   });
 }
 
-// coba load dari data/absensi.json, kalau gagal pakai localStorage
-fetch('data/absensi.json')
-  .then(r=>r.json())
-  .then(list=>renderRingkasan(list))
-  .catch(()=>{
-    let local=JSON.parse(localStorage.getItem('absensi'))||[];
-    if(local.length>0) renderRingkasan(local);
+// download JSON
+function downloadAbsensiJSON(){
+  const data=localStorage.getItem('absensi');
+  if(!data){alert("Belum ada data!");return;}
+  const blob=new Blob([data],{type:'application/json'});
+  saveAs(blob,"absensi.json");
+}
+
+// download Word
+function downloadAbsensiWord(){
+  const data=JSON.parse(localStorage.getItem('absensi'))||[];
+  if(data.length===0){alert("Belum ada data!");return;}
+
+  let htmlContent = `
+  <html xmlns:o='urn:schemas-microsoft-com:office:office'
+        xmlns:w='urn:schemas-microsoft-com:office:word'
+        xmlns='http://www.w3.org/TR/REC-html40'>
+  <head><meta charset='utf-8'><title>Absensi</title></head><body>
+  <h2 style="text-align:center">ABSENSI EKSTRA TARI SDI ULUMIYAH AL MAKRUf</h2>
+  `;
+
+  data.forEach(p=>{
+    htmlContent += `<h3>Pertemuan: ${p.tanggal}</h3>`;
+    htmlContent += `<table border="1" cellspacing="0" cellpadding="5" style="border-collapse:collapse;width:100%;">
+    <tr><th>Nama</th><th>Kelas</th><th>Status</th></tr>`;
+    p.siswa.forEach(s=>{
+      htmlContent += `<tr><td>${s.nama}</td><td>${s.kelas}</td><td>${s.status}</td></tr>`;
+    });
+    htmlContent += `</table>
+    <p style="text-align:right;margin-top:30px;">
+      Kediri, ${new Date().toLocaleDateString('id-ID')}<br>
+      Guru Ekstra Tari<br><br><br><strong>Nikmatu Zuhroh</strong>
+    </p><br>`;
   });
+
+  htmlContent += `</body></html>`;
+
+  const blob = new Blob(['\ufeff', htmlContent], { type: 'application/msword' });
+  saveAs(blob, "Absensi_Ekstra_Tari.doc");
+}
+</script>
+</body>
+</html>
